# FSM-on-dynamodb

./: README.md  pyproject.toml  requirements.txt
aiogram_dynamodb_fsm/: config.py
aiogram_dynamodb_storage/: database.py
app/: config.py  database.py
doc/: README.md
dynamodb_fsm/: database.py
