[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamodb_fsm"
version = "0.0.1"
authors = [
  { name="Yury Soldatov", email="general-soldatov@mail.ru" },
]
description = "FSM storage on dynamo data bases for aiogram 3.10"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/general-soldatov/FSM-on-dynamodb"
Issues = "https://github.com/pypa/sampleproject/issues"